Move public directrory to src and clean config

--- a/src/applications/professional/index.html
+++ b/src/applications/professional/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <script type="module" src="./main.js" defer></script>
+    <script type="module" src="./professional.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App pro</title>
   </head>
